--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -174,6 +174,12 @@ span.icon-hn-inline {
 .icon-orb-card-register-reveal:before {
   content: "R";
 }
+.icon-delivery:before {
+  content: "S";
+}
+.icon-pick-up:before {
+  content: "T";
+}
 
 
 @mixin font-faces() {
