--- a/webroot/scss/app.scss
+++ b/webroot/scss/app.scss
@@ -14,6 +14,7 @@
 @import "footer";
 
 // TEMPLATES                // z-indices
+@import "templates/vendor"; // 9999
 @import "templates/modals"; // 9999
 @import "templates/loading_screen"; // 9999
 @import "templates/splash"; // 9000-series
