--- a/webroot/scss/templates/modals.scss
+++ b/webroot/scss/templates/modals.scss
@@ -1,3 +1,26 @@
+@-webkit-keyframes modal_loading_dots {
+  0% {
+    -webkit-transform: scale(1,1);
+    background-color: $xtreme-blue;
+  }
+  25% {
+    -webkit-transform: scale(0.5, 0.5);
+    background-color: $xtreme-red;
+  }
+}
+.modal-load-dot {
+  background-color:$xtreme-blue;
+  width:3rem;
+  height:3rem;
+  border-radius:1000px;
+  display:inline-block;
+  margin:0.5rem;
+}
+#load-dot-1 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0s running forwards;}
+#load-dot-2 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.25s running forwards;}
+#load-dot-3 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.5s running forwards;}
+#load-dot-4 { -webkit-animation : modal_loading_dots 1s ease-in-out infinite normal 0.75s running forwards;}
+
 #modal-overlay-container {
   position         : fixed;
   top              : 0;
