--- a/webroot/scss/templates/vendor.scss
+++ b/webroot/scss/templates/vendor.scss
@@ -1,141 +1,184 @@
 body#vendor {
-  background-color:$dark-grey;
-}
-main#vendor-page {
-  padding-top:rem-calc(60px);
+  background-color : $dark-grey;
 }
 
+main#vendor-page {
+  padding-top : rem-calc(60px);
+}
 
 #next-order {
-  box-shadow: 0 0 1rem $black-a50;
-  padding:$base-padding;
-  margin:  0 rem-calc(25px) 0 rem-calc(25px);
-  width:rem-calc(550px);
-  float:left;
-  position:absolute;
-  top:rem-calc(75px);
-  left:0;
-  border: 4px solid $white;
-  border-radius:1rem;
-  background-color: $text-grey;
+  box-shadow       : 0 0 1rem $black-a50;
+  padding          : $base-padding;
+  margin           : 0 rem-calc(25px) 0 rem-calc(25px);
+  width            : rem-calc(550px);
+  float            : left;
+  position         : absolute;
+  top              : rem-calc(75px);
+  left             : 0;
+  border           : 4px solid $white;
+  border-radius    : 1rem;
+  background-color : $text-grey;
 }
+
 #values {
-  border-left: 1px solid $light-grey;
+  border-left : 1px solid $light-grey;
 }
+
 #order-content {
-  border-bottom:2px dashed $text-grey;
+  border-bottom : 2px dashed $text-grey;
   @include primary-modal-bg;
-  color: $text-grey;
-  padding: $base-padding $tight-padding;
-  height:rem-calc(300px);
-  h1, h2, h3, h4, h5, p, span, ul, li  {
-    background-color:transparent;
-    color: $text-grey !important;
+  color         : $text-grey;
+  padding       : $base-padding $tight-padding;
+  height        : rem-calc(300px);
+  h1, h2, h3, h4, h5, p, span, ul, li {
+    background-color : transparent;
+    color            : $text-grey !important;
   }
   span {
-    display:block;
-    min-height:1.75rem;
+    display    : block;
+    min-height : 1.75rem;
   }
-  span.label { font-size:rem-calc(18px);
-    text-align: left;
-    vertical-align:top;
+  span.label { font-size : rem-calc(18px);
+    text-align           : left;
+    vertical-align       : top;
   }
   span.value {
     @include HelveticaMdCn;
-    color: $xtreme-blue;
-    font-size:rem-calc(16px);
+    color     : $xtreme-blue;
+    font-size : rem-calc(16px);
   }
   ul#food-list {
     @include HelveticaMdCn;
-    display:inline-block;
+    display : inline-block;
   }
 
 }
+
 .vendor-button {
-  text-align: center;
-  text-shadow:0 0 0.5rem $text-grey;
+  text-align  : center;
+  text-shadow : 0 0 0.5rem $text-grey;
 }
+@-webkit-keyframes accept-glow {
+  0% { text-shadow : 0 0 0.5rem $text-grey;}
+  50% { text-shadow:0 0 1rem $white;}
+  100% { text-shadow : 0 0 0.5rem $text-grey;}
+}
+
 #order-accept-button {
-  height: rem-calc(400px);
-  font-size:rem-calc(128px);
-  line-height:rem-calc(450px);
-  background: rgb(191,210,85); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(191,210,85,1) 0%, rgba(142,185,42,1) 50%, rgba(114,170,0,1) 51%, rgba(158,203,45,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(191,210,85,1)), color-stop(50%,rgba(142,185,42,1)), color-stop(51%,rgba(114,170,0,1)), color-stop(100%,rgba(158,203,45,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(191,210,85,1) 0%,rgba(142,185,42,1) 50%,rgba(114,170,0,1) 51%,rgba(158,203,45,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(191,210,85,1) 0%,rgba(142,185,42,1) 50%,rgba(114,170,0,1) 51%,rgba(158,203,45,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(191,210,85,1) 0%,rgba(142,185,42,1) 50%,rgba(114,170,0,1) 51%,rgba(158,203,45,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(191,210,85,1) 0%,rgba(142,185,42,1) 50%,rgba(114,170,0,1) 51%,rgba(158,203,45,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfd255', endColorstr='#9ecb2d',GradientType=0 ); /* IE6-9 */
+  height      : rem-calc(400px);
+  font-size   : rem-calc(128px);
+  line-height : rem-calc(450px);
+  background  : rgb(191, 210, 85); /* Old browsers */
+  background  : -moz-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* FF3.6+ */
+  background  : -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(191, 210, 85, 1)), color-stop(50%, rgba(142, 185, 42, 1)), color-stop(51%, rgba(114, 170, 0, 1)), color-stop(100%, rgba(158, 203, 45, 1))); /* Chrome,Safari4+ */
+  background  : -webkit-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* Chrome10+,Safari5.1+ */
+  background  : -o-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* Opera 11.10+ */
+  background  : -ms-linear-gradient(top, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* IE10+ */
+  background  : linear-gradient(to bottom, rgba(191, 210, 85, 1) 0%, rgba(142, 185, 42, 1) 50%, rgba(114, 170, 0, 1) 51%, rgba(158, 203, 45, 1) 100%); /* W3C */
+  filter      : progid:DXImageTransform.Microsoft.gradient(startColorstr='#bfd255', endColorstr='#9ecb2d', GradientType=0); /* IE6-9 */
+  -webkit-animation: accept-glow 3s ease-in-out infinite normal 0s running forwards;
+//  -webkit-animation   : stash-splash-circle 1s ease-in 1 normal 0.6s paused forwards;
 }
+
 #order-reject-button {
-  font-size:rem-calc(48px);
-  height:rem-calc(80px);
-  line-height:rem-calc(100px);
-  background: rgb(248,80,50); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(248,80,50,1) 0%, rgba(241,111,92,1) 50%, rgba(246,41,12,1) 51%, rgba(240,47,23,1) 71%, rgba(231,56,39,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(248,80,50,1)), color-stop(50%,rgba(241,111,92,1)), color-stop(51%,rgba(246,41,12,1)), color-stop(71%,rgba(240,47,23,1)), color-stop(100%,rgba(231,56,39,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(248,80,50,1) 0%,rgba(241,111,92,1) 50%,rgba(246,41,12,1) 51%,rgba(240,47,23,1) 71%,rgba(231,56,39,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827',GradientType=0 ); /* IE6-9 */
+  font-size   : rem-calc(48px);
+  height      : rem-calc(80px);
+  line-height : rem-calc(100px);
+  background  : rgb(248, 80, 50); /* Old browsers */
+  background  : -moz-linear-gradient(top, rgba(248, 80, 50, 1) 0%, rgba(241, 111, 92, 1) 50%, rgba(246, 41, 12, 1) 51%, rgba(240, 47, 23, 1) 71%, rgba(231, 56, 39, 1) 100%); /* FF3.6+ */
+  background  : -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(248, 80, 50, 1)), color-stop(50%, rgba(241, 111, 92, 1)), color-stop(51%, rgba(246, 41, 12, 1)), color-stop(71%, rgba(240, 47, 23, 1)), color-stop(100%, rgba(231, 56, 39, 1))); /* Chrome,Safari4+ */
+  background  : -webkit-linear-gradient(top, rgba(248, 80, 50, 1) 0%, rgba(241, 111, 92, 1) 50%, rgba(246, 41, 12, 1) 51%, rgba(240, 47, 23, 1) 71%, rgba(231, 56, 39, 1) 100%); /* Chrome10+,Safari5.1+ */
+  background  : -o-linear-gradient(top, rgba(248, 80, 50, 1) 0%, rgba(241, 111, 92, 1) 50%, rgba(246, 41, 12, 1) 51%, rgba(240, 47, 23, 1) 71%, rgba(231, 56, 39, 1) 100%); /* Opera 11.10+ */
+  background  : -ms-linear-gradient(top, rgba(248, 80, 50, 1) 0%, rgba(241, 111, 92, 1) 50%, rgba(246, 41, 12, 1) 51%, rgba(240, 47, 23, 1) 71%, rgba(231, 56, 39, 1) 100%); /* IE10+ */
+  background  : linear-gradient(to bottom, rgba(248, 80, 50, 1) 0%, rgba(241, 111, 92, 1) 50%, rgba(246, 41, 12, 1) 51%, rgba(240, 47, 23, 1) 71%, rgba(231, 56, 39, 1) 100%); /* W3C */
+  filter      : progid:DXImageTransform.Microsoft.gradient(startColorstr='#f85032', endColorstr='#e73827', GradientType=0); /* IE6-9 */
 }
+
 #pending-orders-count {
-  position:absolute;
-  float:right;
-  top: -2rem;
-  right: -1.5rem;
-  border-radius:1000px;
-  box-shadow:0 0 1rem $black-a33;
-  border:6px solid white;
-  background-color:$xtreme-blue;
-  padding:1rem;
-  font-size:rem-calc(64px);
-  line-height:rem-calc(88px);
-  height:rem-calc(128px);
-  width:rem-calc(128px);
-  text-align:center;
-  text-shadow:0 0 0.33rem $black-a50;
+  position         : absolute;
+  float            : right;
+  top              : -2rem;
+  right            : -1.5rem;
+  border-radius    : 1000px;
+  box-shadow       : 0 0 1rem $black-a33;
+  border           : 6px solid white;
+  background-color : $xtreme-blue;
+  padding          : 1rem;
+  font-size        : rem-calc(64px);
+  line-height      : rem-calc(88px);
+  height           : rem-calc(128px);
+  width            : rem-calc(128px);
+  text-align       : center;
+  text-shadow      : 0 0 0.33rem $black-a50;
   h5 {
-    position:relative;
-    width:rem-calc(150px);
-    font-size:rem-calc(16px);
-    text-shadow:0 0 0.33rem $black-a50;
-    -webkit-transform: translate(rem-calc(-30px), rem-calc(-30px));
+    position          : relative;
+    width             : rem-calc(150px);
+    font-size         : rem-calc(16px);
+    text-shadow       : 0 0 0.33rem $black-a50;
+    -webkit-transform : translate(rem-calc(-30px), rem-calc(-30px));
   }
 }
 
 #back-splash {
-  position:fixed;
-  top:rem-calc(80px);
-  left:rem-calc(25);
-  width:rem-calc(550px);
-  height:rem-calc(780px);
-  padding-top:rem-calc(100px);
-  font-size:rem-calc(134px);
-  text-align: center;
-  line-height:200px;
-  color: $text-grey;
-  z-index:1;
-  border-radius:1rem;
-  border:12px solid $text-grey;
-
+  position      : fixed;
+  top           : rem-calc(80px);
+  left          : rem-calc(25);
+  width         : rem-calc(550px);
+  height        : rem-calc(780px);
+  padding-top   : rem-calc(100px);
+  font-size     : rem-calc(134px);
+  text-align    : center;
+  line-height   : 200px;
+  color         : $text-grey;
+  z-index       : 1;
+  border-radius : 1rem;
+  border        : 12px solid $text-grey;
 }
 
 #order-reject-confirmation {
-  &.slide-left { -webkit-transform: translateX(rem-calc(-650px));}
-  width: rem-calc(600px);
-  position:absolute;
-  z-index:9999;
-  height:200px;
-  top:300px;
-  left:-25px;
-  padding:$base-padding;
-  background-color:$white;
-  box-shadow: 0 0 1rem $black-a50;
-  border: 2px solid $text-grey;
-  h1, h3 { color: $xtreme-red; }
-  h3 {margin-top:-1rem;}
-//  span { color:$text-grey !important;}
+  &.slide-left { -webkit-transform : translateX(rem-calc(-650px)); }
+  width            : rem-calc(600px);
+  position         : absolute;
+  z-index          : 9999;
+  height           : 200px;
+  top              : 300px;
+  left             : -25px;
+  padding          : $base-padding;
+  background-color : $white;
+  box-shadow       : 0 0 1rem $black-a50;
+  border           : 2px solid $text-grey;
+  h1, h3 { color : $xtreme-red; }
+  h3 { margin-top : -1rem; }
+  //  span { color:$text-grey !important;}
+}
+
+#food-list {
+  ul.orb {
+    li {
+      height:1.1rem;
+      line-height:1.1rem;
+      &:first-of-type { }
+      &.orb-opt {
+        border-bottom: 1px dotted $light-grey;
+        span {
+          min-height:0;
+          height:inherit;
+          line-height: inherit;
+          display:inline-block;
+          vertical-align:top;
+        }
+        color: $xtreme-blue;
+        padding-left:1rem;
+        font-size:0.8rem;
+        span.text {  -webkit-transform: translateY(0.15rem); }
+        span[class*="icon-"] {
+          color:$xtreme-red !important;
+          font-size:0.9rem;
+          right:0;
+          top:0;
+          float: right;
+        }
+      }
+    }
+  }
 }
