--- a/webroot/scss/templates/vendor.scss
+++ b/webroot/scss/templates/vendor.scss
@@ -155,18 +155,20 @@ main#vendor-page {
 #food-list {
   ul.orb {
     li {
+      span {
+        min-height:0;
+        height:inherit;
+        line-height: inherit;
+        display:inline-block;
+        vertical-align:top;
+      }
       height:1.1rem;
       line-height:1.1rem;
-      &:first-of-type { }
+      &:first-of-type {
+        span.size { width:2.5rem;}
+      }
       &.orb-opt {
         border-bottom: 1px dotted $light-grey;
-        span {
-          min-height:0;
-          height:inherit;
-          line-height: inherit;
-          display:inline-block;
-          vertical-align:top;
-        }
         color: $xtreme-blue;
         padding-left:1rem;
         font-size:0.8rem;
